--- a/GitHub User Profile/Base.lproj/Main.storyboard
+++ b/GitHub User Profile/Base.lproj/Main.storyboard
@@ -198,13 +198,15 @@
                                 </connections>
                             </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jetpackoctocat" translatesAutoresizingMaskIntoConstraints="NO" id="P9s-Hg-Yzi">
-                                <rect key="frame" x="16" y="163.5" width="343" height="180"/>
+                                <rect key="frame" x="16" y="233.5" width="343" height="180"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="b0E-BB-kh6"/>
+                                    <constraint firstAttribute="height" constant="180" id="b0E-BB-kh6">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="120"/>
+                                    </constraint>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNo-DH-KBw">
-                                <rect key="frame" x="16" y="367" width="343" height="20.5"/>
+                                <rect key="frame" x="16" y="566.5" width="343" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.58823529409999997" green="0.58823529409999997" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -213,14 +215,19 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="P9s-Hg-Yzi" firstAttribute="top" secondItem="gNo-DH-KBw" secondAttribute="bottom" constant="-10" id="6UR-if-qFI"/>
-                            <constraint firstItem="P9s-Hg-Yzi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-80" id="8db-Cz-L6T"/>
                             <constraint firstItem="SHG-AC-t3r" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ATr-Xy-V2T"/>
+                            <constraint firstItem="P9s-Hg-Yzi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-10" id="EcH-4p-dOf">
+                                <variation key="heightClass=compact-widthClass=compact" constant="-20"/>
+                            </constraint>
+                            <constraint firstItem="F0m-jm-QyP" firstAttribute="bottom" secondItem="gNo-DH-KBw" secondAttribute="bottom" constant="80" id="HgL-wa-B31">
+                                <variation key="heightClass=compact-widthClass=compact" constant="24"/>
+                            </constraint>
                             <constraint firstItem="F0m-jm-QyP" firstAttribute="centerX" secondItem="gNo-DH-KBw" secondAttribute="centerX" id="J8G-FG-vfd"/>
                             <constraint firstAttribute="bottom" secondItem="SHG-AC-t3r" secondAttribute="bottom" id="QdJ-96-eZ5"/>
                             <constraint firstItem="F0m-jm-QyP" firstAttribute="trailing" secondItem="SHG-AC-t3r" secondAttribute="trailing" id="cP0-2U-rD9"/>
                             <constraint firstItem="SHG-AC-t3r" firstAttribute="leading" secondItem="F0m-jm-QyP" secondAttribute="leading" id="d5k-yk-2uX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="gNo-DH-KBw" secondAttribute="trailing" id="gGV-BT-EWK"/>
-                            <constraint firstItem="gNo-DH-KBw" firstAttribute="top" secondItem="P9s-Hg-Yzi" secondAttribute="bottom" constant="24" id="jas-qf-BSr"/>
+                            <constraint firstItem="gNo-DH-KBw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="P9s-Hg-Yzi" secondAttribute="bottom" constant="20" id="jas-qf-BSr"/>
                             <constraint firstItem="SHG-AC-t3r" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="64" id="oB2-Fo-mnF"/>
                             <constraint firstItem="P9s-Hg-Yzi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="peA-nf-G01"/>
                             <constraint firstItem="gNo-DH-KBw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="x7v-3s-97B"/>
