--- a/iOS/Base.lproj/Main.storyboard
+++ b/iOS/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="SHG-AC-t3r">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="UserInfoCell" rowHeight="145" id="jcx-kX-ftK" customClass="UserInfoTableViewCell" customModule="GitHub_iOS" customModuleProvider="target">
@@ -215,7 +215,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="P9s-Hg-Yzi" firstAttribute="top" secondItem="gNo-DH-KBw" secondAttribute="bottom" constant="-10" id="6UR-if-qFI"/>
-                            <constraint firstItem="SHG-AC-t3r" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ATr-Xy-V2T"/>
+                            <constraint firstItem="SHG-AC-t3r" firstAttribute="top" secondItem="F0m-jm-QyP" secondAttribute="top" id="ATr-Xy-V2T"/>
                             <constraint firstItem="P9s-Hg-Yzi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-10" id="EcH-4p-dOf">
                                 <variation key="heightClass=compact-widthClass=compact" constant="-20"/>
                             </constraint>
